--- a/README
+++ b/README
@@ -4,7 +4,7 @@ thermometry (by way of thermocrhomic liquid crystals).
 -----
 
 SPIVET is Copyright (C) 2007-2010 William Newsome
- 
+Xiyuan Bao in 2019 adapted SPIVET to python 2.7. 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
